yaml/5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lslsp-httpserver
spec:
  type: NodePort 
  ports:
    - port: 80
      nodePort: 30000
      protocol: TCP
      name: http
  selector:
    app: httpserver
